--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "wensleydale/sendpulse-laravel",
+  "name": "skrypnik-dzencode/sendpulse-laravel",
   "description": "A minimal service provider to set up and use the SendPulse PHP library in Laravel 5",
   "keywords": ["sendpulse", "laravel"],
   "license": "MIT",
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "illuminate/support": "5.*",
+    "illuminate/support": "*",
     "wensleydale/sendpulse-rest-api-php": "1.*"
   },
   "require-dev": {
